# automated-test

./: .coverage  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
src/random_script/: random_script.py
src/random_script.egg-info/: PKG-INFO  SOURCES.txt
tests/: .coverage  conftest.py  test_random.py
