[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

# This is the configuration for pytest and mypy

[tool.pytest.ini_options]
addopts = "--cov=random_script"  # This will display the cover report in the terminal
# This is the test directory which pytest will check.
# Then looks for any module that starts with test_
# Goes into the module and runs all funcions with test_
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true