[metadata]
name = random_script
description = just create to learn how to automate tests
author = BugGreen
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    random_script
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

# Indicate that the python package has been typeded
[options.package_data]
random_script = py.typed

# Configuration for the program tha will be used.
# Not always the configuration is located in this file.
# It depends on the program.
[flake8]
max-line-length = 160